# pecrs-py

./: LICENSE  README.md  changes.md  example.py  group_example.py  pyproject.toml  quickstart.py  setup.py  test.py
docs/: .buildinfo  body.html  body.rst  collider.html  collider.rst  conf.py  controller.html  genindex.html  index.html  index.rst  install.html  install.rst  objects.inv  overview.html  overview.rst  py-modindex.html  pyglet.html  pyglet.rst  search.html  searchindex.js  shape.html  shape.rst  space.html
docs/_build/doctrees/: body.doctree  collider.doctree  controller.doctree  environment.pickle  index.doctree  install.doctree  overview.doctree  pyglet.doctree  shape.doctree  space.doctree
docs/_build/html/: .buildinfo  body.html  controller.html  genindex.html  index.html  install.html  objects.inv  overview.html  py-modindex.html  pyglet.html  search.html  searchindex.js  shape.html  space.html
docs/_build/html/_sources/: controller.rst.txt  index.rst.txt  install.rst.txt  overview.rst.txt  space.rst.txt
docs/_build/html/_static/: documentation_options.js
docs/_sources/: index.rst.txt
pecrs/: __init__.py  body.py  clock.py  collider.py  constants.py  controller.py  index.py  shape.py  space.py  spatialhash.py  vector.py
src/: controller.py  spatialhash.py
